# YoNoSplat

./: pyproject.toml  setup.py
yonosplat/: eval_pose.py  main.py
yonosplat/misc/: image_io.py  utils.py
yonosplat/model/decoder/: cuda_splatting.py
yonosplat/model/encoder/backbone/: backbone_local_global.py
yonosplat/model/encoder/backbone/dinov2/models/: vision_transformer.py
