[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "torch>=2.10.0", "wheel"]

[project]
dependencies = [
  "beartype>=0.22.9",
  "colorama>=0.4.6",
  "colorspacious>=1.1.2",
  "dacite>=1.9.2",
  "e3nn>=0.6.0",
  "einops>=0.8.2",
  "hydra-core>=1.3.3",
  "imageio>=2.37.3",
  "jaxtyping>=0.3.7",
  "lightning>=2.6.5",
  "lpips>=0.1.4",
  "matplotlib>=3.10.9",
  "moviepy==1.0.3",
  "opencv-python>=4.13.0.92",
  "plyfile>=1.1.4",
  "scikit-image>=0.25.2",
  "scikit-video>=1.1.11",
  "svg-py>=1.10.0",
  "tabulate>=0.10.0",
  "timm>=1.0.27",
  "tqdm>=4.68.3",
  "wandb>=0.27.2",
]
name = "yonosplat"
requires-python = ">= 3.10"
version = "0.0.1"

[tool.setuptools.packages.find]
include = ["yonosplat*"]
where = ["."]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I"]
ignore = ["F722"] # Ignore F722 for jaxtyping compatibility.

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
